add sort to filtersBook
